# VirtualAssistant

./: LICENSE  README.md
va_lib/: Cargo.toml
va_lib/src/: lib.rs
va_mic_daemon/: Cargo.toml
va_mic_daemon/src/: app.rs  domain.rs  infra.rs  main.rs
