[package]
name = "va_mic_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.68"
cpal = "0.15.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
va_lib = { path = "../va_lib" }
